--- a/doc/learning.qmd
+++ b/doc/learning.qmd
@@ -58,3 +58,7 @@ nhanes_small %>%
   ) %>%
   knitr::kable(caption = "Mean values of Age and BMI for each education and diabetes status.")
 ```
+Happy girl in @fig-happy-girl!
+
+![Happy girl with obesity from The World Obesity Image Bank](images/Girl.jpg){#fig-happy-girl width="50%" height="50%"}
+
