Plotting of two, contiounes and mixed variables

--- a/doc/learning.qmd
+++ b/doc/learning.qmd
@@ -138,3 +138,44 @@ nhanes_small %>%
   ggplot(aes(x = education)) +
   geom_bar()
 ```
+
+
+### Plotting two variables
+
+```{r}
+ggplot(nhanes_small, aes(x = bmi, y = bp_sys_ave)) +
+  geom_hex(na.rm = TRUE)
+```
+```{r}
+# Add a smoothing line with confidence interval
+ggplot(nhanes_small, aes(x = bmi, y = bp_sys_ave)) +
+  geom_hex(na.rm = TRUE) +
+  geom_smooth(na.rm = TRUE)
+```
+
+```{r}
+# Two categorical variables
+nhanes_small %>%
+  filter(!is.na(education), !is.na(diabetes)) %>%
+  ggplot(aes(x = diabetes, fill = education)) +
+  geom_bar()
+```
+
+```{r}
+# "dodged" barplot
+nhanes_small %>%
+  filter(!is.na(education), !is.na(diabetes)) %>%
+  ggplot(aes(x = diabetes, fill = education)) +
+  geom_bar(position = position_dodge())
+```
+### Plotting continuos and discrete variables
+
+BMI in those with and without diabetes
+
+```{r}
+# Using mixed data
+nhanes_small %>%
+  filter(!is.na(diabetes), bmi <= 60) %>%
+  ggplot(aes(x = diabetes, y = bmi)) +
+  geom_violin(na.rm = TRUE)
+```
