Exercise and plot with three variables

--- a/doc/learning.qmd
+++ b/doc/learning.qmd
@@ -179,3 +179,56 @@ nhanes_small %>%
   ggplot(aes(x = diabetes, y = bmi)) +
   geom_violin(na.rm = TRUE)
 ```
+
+## Exercise to make plots with one or two variables
+```{r}
+library(NHANES)
+nhanes_exercise <- NHANES %>%
+  rename_with(snakecase::to_snake_case) %>%
+  rename(sex = gender)
+```
+
+
+```{r distrubution-age-diabetes-in-exercise}
+#| label: fig-exercise-age-diabetes
+#| fig-cap: "Distrubition of age and age at diabetes diagnosis at baseline"
+#| fig-subcap: 
+#|   - "Age at baseline"
+#|   - "Age of diabetes diagnosis"
+#| layout-ncol: 2
+# Distribution of age
+nhanes_exercise %>% 
+  ggplot(aes(x = age)) +
+    geom_density(na.rm = TRUE)
+
+# Distribution of age at diabetes diagnosis
+nhanes_exercise %>% 
+  ggplot(aes(x = diabetes_age)) +
+    geom_density(na.rm = TRUE)
+```
+
+```{r}
+# Number of people who smoke now and are or above 20 years of age,
+# removing those with missing smoking status.
+nhanes_exercise %>% 
+  filter(age >= 20, !is.na(smoke_now)) %>% 
+  ggplot(aes(x = smoke_now)) +
+  geom_bar()
+```
+#NOT FINISHED exercise 9.5.4
+
+## Plotting three or more variables
+```{r}
+#Plot of systolic blood pressure in relation to educational level and diabetes
+nhanes_small %>% 
+    filter(!is.na(diabetes), !is.na(education)) %>% 
+    ggplot(aes(x = education, y = bp_sys_ave, colour = diabetes)) +
+    geom_boxplot(na.rm = TRUE)
+```
+```{r}
+# Plot of BMI in relation to systolic blood pressure and age
+nhanes_small %>% 
+    ggplot(aes(x = bmi, y = bp_sys_ave, colour = age)) +
+    geom_point(na.rm = TRUE)
+```
+
