--- a/doc/learning.qmd
+++ b/doc/learning.qmd
@@ -192,26 +192,26 @@ nhanes_exercise <- NHANES %>%
 ```{r distrubution-age-diabetes-in-exercise}
 #| label: fig-exercise-age-diabetes
 #| fig-cap: "Distrubition of age and age at diabetes diagnosis at baseline"
-#| fig-subcap: 
+#| fig-subcap:
 #|   - "Age at baseline"
 #|   - "Age of diabetes diagnosis"
 #| layout-ncol: 2
 # Distribution of age
-nhanes_exercise %>% 
+nhanes_exercise %>%
   ggplot(aes(x = age)) +
-    geom_density(na.rm = TRUE)
+  geom_density(na.rm = TRUE)
 
 # Distribution of age at diabetes diagnosis
-nhanes_exercise %>% 
+nhanes_exercise %>%
   ggplot(aes(x = diabetes_age)) +
-    geom_density(na.rm = TRUE)
+  geom_density(na.rm = TRUE)
 ```
 
 ```{r}
 # Number of people who smoke now and are or above 20 years of age,
 # removing those with missing smoking status.
-nhanes_exercise %>% 
-  filter(age >= 20, !is.na(smoke_now)) %>% 
+nhanes_exercise %>%
+  filter(age >= 20, !is.na(smoke_now)) %>%
   ggplot(aes(x = smoke_now)) +
   geom_bar()
 ```
@@ -219,16 +219,54 @@ nhanes_exercise %>%
 
 ## Plotting three or more variables
 ```{r}
-#Plot of systolic blood pressure in relation to educational level and diabetes
-nhanes_small %>% 
-    filter(!is.na(diabetes), !is.na(education)) %>% 
-    ggplot(aes(x = education, y = bp_sys_ave, colour = diabetes)) +
-    geom_boxplot(na.rm = TRUE)
+# Plot of systolic blood pressure in relation to educational level and diabetes
+nhanes_small %>%
+  filter(!is.na(diabetes), !is.na(education)) %>%
+  ggplot(aes(x = education, y = bp_sys_ave, colour = diabetes)) +
+  geom_boxplot(na.rm = TRUE)
 ```
 ```{r}
 # Plot of BMI in relation to systolic blood pressure and age
-nhanes_small %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave, colour = age)) +
-    geom_point(na.rm = TRUE)
+nhanes_small %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, colour = age)) +
+  geom_point(na.rm = TRUE)
 ```
 
+
+```{r}
+# Plot BMI in relation to systolic blood pressure and diabetes status.
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, colour = diabetes)) +
+  geom_point(na.rm = TRUE)
+```
+
+```{r}
+# Plot BMI in relation to systolic blood pressure in those with and without diabetes, using faceting by columns
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(cols = vars(diabetes))
+```
+
+```{r}
+# faceting by row
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(rows = vars(diabetes))
+```
+
+```{r}
+# Plot BMI in relation to systolic blood pressure, diabetes status, education level and age.
+nhanes_small %>%
+  filter(!is.na(diabetes), !is.na(education)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, colour = age)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(
+    rows = vars(diabetes),
+    cols = vars(education)
+  )
+```
